[package]
name = "gtk_widget_macro_derive"
version = "0.1.1"
authors = ["fralonra <zoronlivingston@gmail.com>"]
edition = "2021"
description = "A derive macro helps you handle Gtk widgets"
readme = "README.md"
homepage = "https://github.com/fralonra/gtk_widget_macro"
repository = "https://github.com/fralonra/gtk_widget_macro"
license = "MIT"
keywords = ["gtk", "gtk-rs", "macro", "macros"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.13" }
